--- a/src/containers/order/styles.module.scss
+++ b/src/containers/order/styles.module.scss
@@ -68,6 +68,7 @@
 }
 .table {
     overflow-y: auto;
+    scrollbar-width: none;
     height: auto;
     max-height: 593px;
     table {
